objects/Opportunity.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <businessProcesses>
        <fullName>SO Classic Reborn</fullName>
        <description>JLR Classic Reborn Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Signed</fullName>
        </values>
        <values>
            <fullName>Contracting</fullName>
        </values>
        <values>
            <fullName>Order Placed</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Specification %26 Quotation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SO Classic Bespoke</fullName>
        <description>JLR Classic Bespoke Restoration Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Signed</fullName>
        </values>
        <values>
            <fullName>Contracting</fullName>
        </values>
        <values>
            <fullName>Estimate</fullName>
        </values>
        <values>
            <fullName>Order Placed</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SO Classic Service</fullName>
        <description>JLR Classic Service Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contracting</fullName>
        </values>
        <values>
            <fullName>Estimate</fullName>
        </values>
        <values>
            <fullName>Order Placed</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SO VIP Opportunity</fullName>
        <description>JLR SVO Private Office Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Experience</fullName>
        </values>
        <values>
            <fullName>Order Placed</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Specification %26 Quotation</fullName>
        </values>
        <values>
            <fullName>Verbal Commitment</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SO Bespoke Opportunity</fullName>
        <description>JLR SVO Bespoke Commission Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Commission</fullName>
        </values>
        <values>
            <fullName>Contract Signed</fullName>
        </values>
        <values>
            <fullName>Design Brief %26 Quote</fullName>
        </values>
        <values>
            <fullName>Order Placed</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SO Classic Works Legend</fullName>
        <description>JLR Classic Works Legend Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Signed</fullName>
        </values>
        <values>
            <fullName>Contracting</fullName>
        </values>
        <values>
            <fullName>Order Placed</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Quotation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SO Classic Sales Waitlist</fullName>
        <description>JLR Classic Wait List Based Sales Process (Limited Edition, Continuation)</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Signed</fullName>
        </values>
        <values>
            <fullName>Contracting</fullName>
        </values>
        <values>
            <fullName>Order Placed</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Specification %26 Quotation</fullName>
        </values>
        <values>
            <fullName>Wait List</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>SO_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SO_Vehicle_Manufacturer__c.Name</field>
                <operation>equals</operation>
                <value>Jaguar,Land Rover,Daimler</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Manufacturer__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND ((2 AND 3) OR (4 AND 5))</booleanFilter>
            <filterItems>
                <field>SO_Vehicle_Model__c.SO_Manufacturer__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Brand__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>SVO Bespoke, SVO Private Office</value>
            </filterItems>
            <filterItems>
                <field>SO_Vehicle_Model__c.SO_Is_Available_SVO__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Classic Bespoke, Classic Continuation, Classic Reborn, Classic Works Legend, Classic Limited Edition, Classic Service</value>
            </filterItems>
            <filterItems>
                <field>SO_Vehicle_Model__c.SO_Is_JLR_Classic__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Model__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SVO Client Opportunities</relationshipLabel>
        <relationshipName>Client_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SO_Sales_Area__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>JLR_Markets</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JLR_Regions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Revenue__c</fullName>
        <label>Revenue (£)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6)</booleanFilter>
            <filterItems>
                <field>$Source.SO_Body_Style__c</field>
                <operation>notEqual</operation>
                <value/>
            </filterItems>
            <filterItems>
                <field>Asset.SO_Body_Style__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Body_Style__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.SO_Series_Name__c</field>
                <operation>notEqual</operation>
                <value/>
            </filterItems>
            <filterItems>
                <field>Asset.SO_Series_Name__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Series_Name__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.SO_Model__c</field>
                <operation>notEqual</operation>
                <value/>
            </filterItems>
            <filterItems>
                <field>Asset.SO_Model__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Model__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Programme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Programme</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SO_Programme__c.SO_Product_Offering__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Product_Offering__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SO_Programme__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <description>To display the total retail price of main vehicle and  additional vehicles for the opportunity</description>
        <formula>Total_Retail_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor A</fullName>
                </value>
                <value>
                    <fullName>Competitor B</fullName>
                </value>
                <value>
                    <fullName>Competitor C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Body_Style__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Body Style</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.SO_Series_Name__c</field>
                <operation>equals</operation>
                <value/>
            </filterItems>
            <filterItems>
                <field>SO_Vehicle_Body_Style__c.SO_Model__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Model__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.SO_Series_Name__c</field>
                <operation>notEqual</operation>
                <value/>
            </filterItems>
            <filterItems>
                <field>SO_Vehicle_Body_Style__c.SO_Series__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Series_Name__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Body_Style__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Cost_Price__c</fullName>
        <label>Cost Price (£)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Derivative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Derivative</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected Derivative doesn&apos;t belong to the Series</errorMessage>
            <filterItems>
                <field>SO_Vehicle_Derivative__c.SO_Vehicle_Series__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Series_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Derivative__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Env_Org_Id__c</fullName>
        <formula>$Organization.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO_Env_Org_Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SO_Model_Year__c</fullName>
        <label>Model Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>19MY</fullName>
                </value>
                <value>
                    <fullName>20MY</fullName>
                </value>
                <value>
                    <fullName>21MY</fullName>
                </value>
                <value>
                    <fullName>22MY</fullName>
                </value>
                <value>
                    <fullName>23MY</fullName>
                </value>
                <value>
                    <fullName>24MY</fullName>
                </value>
                <value>
                    <fullName>25MY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Sales_Area__c</fullName>
        <label>Sales Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SO_Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>JLR_Sales_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Wheel_Base__c</fullName>
        <label>Wheel Base</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Wheelbase</fullName>
                </value>
                <value>
                    <fullName>Long Wheelbase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <description>To display the total revenue of main vehicle and  additional vehicles for the opportunity</description>
        <formula>SO_Revenue__c + Total_Additional_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Revenue (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Actual_Cost__c</fullName>
        <label>Actual Cost (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase deferred</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Competition - Aftermarket third party</fullName>
                </value>
                <value>
                    <fullName>Affordability</fullName>
                </value>
                <value>
                    <fullName>No response</fullName>
                </value>
                <value>
                    <fullName>No longer purchasing</fullName>
                </value>
                <value>
                    <fullName>Order cancelled</fullName>
                </value>
                <value>
                    <fullName>Retailer related</fullName>
                </value>
                <value>
                    <fullName>Product - Design</fullName>
                </value>
                <value>
                    <fullName>Product - Lead time</fullName>
                </value>
                <value>
                    <fullName>Product - Performance</fullName>
                </value>
                <value>
                    <fullName>Product - Unfeasible request</fullName>
                </value>
                <value>
                    <fullName>Product - No longer available</fullName>
                </value>
                <value>
                    <fullName>Project cancelled</fullName>
                </value>
                <value>
                    <fullName>Core vehicle chosen</fullName>
                </value>
                <value>
                    <fullName>Restricted party check restricted</fullName>
                </value>
                <value>
                    <fullName>Donor Not Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_SAP_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAP Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>SO_SAP_Account__c.SO_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Classic Bespoke, Classic Continuation, Classic Reborn, Classic Works Legend, Classic Limited Edition, Classic Service</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SO_SAP_Account__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Series_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Series Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected Series doesn&apos;t belong to the Model.</errorMessage>
            <filterItems>
                <field>SO_Vehicle_Series__c.SO_Model__c</field>
                <operation>equals</operation>
                <valueField>$Source.SO_Model__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SO_Vehicle_Series__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Speedometer__c</fullName>
        <label>Speedometer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MPH</fullName>
                </value>
                <value>
                    <fullName>KPH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Build_Colour__c</fullName>
        <label>Build Colour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Contribution__c</fullName>
        <label>Contribution (£)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Deposit_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deposit Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Env_Base_URL__c</fullName>
        <formula>LEFT($Api.Enterprise_Server_URL_300, FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_300))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO_Env_Base_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Includes_MOT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a key field in Marketing Cloud journeys. It is used to establish if a customer has a MOT booked to prevent MOT marketing material.</description>
        <inlineHelpText>Is this service activity also expected to perform a MOT?</inlineHelpText>
        <label>Includes MOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Retail_Price__c</fullName>
        <label>Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SO_Type_of_Sale__c</fullName>
        <label>Type of Sale</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SO_Product_Offering__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>JLR_Type_of_Sale</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Greeting__c</fullName>
        <formula>IF( ISBLANK(TEXT(SO_Preferred_Contact__r.Salutation)) , SO_Preferred_Contact__r.LastName,
IF( ISPICKVAL(SO_Preferred_Contact__r.Salutation, &apos;Other&apos;),
SO_Preferred_Contact__r.Salutation_Other__c &amp; &quot; &quot; &amp; SO_Preferred_Contact__r.LastName , TEXT(SO_Preferred_Contact__r.Salutation) &amp; &quot; &quot; &amp; SO_Preferred_Contact__r.LastName)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Greeting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Business_Unit__c</fullName>
        <formula>CASE( RecordType.DeveloperName , 
  &apos;SO_Classic_Bespoke&apos;, &apos;Classic Service&apos;,
  &apos;SO_Continuation&apos;, &apos;Classic Sales&apos;,
  &apos;SO_Limited_Edition&apos;, &apos;Classic Sales&apos;,
  &apos;SO_Reborn&apos;, &apos;Classic Sales&apos;,
  &apos;SO_Service&apos;, &apos;Classic Service&apos;,
  &apos;SO_Works_Legends&apos;, &apos;Classic Sales&apos;,
  &apos;SO_Bespoke&apos;, &apos;SVO Bespoke&apos;,
  &apos;SO_VIP&apos;, &apos;SVO Private Office&apos;,
  &apos;&apos;)</formula>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Hand_of_Drive__c</fullName>
        <label>Hand of Drive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JLR_Hand_of_Drive</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Part_Exchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part Exchange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Price__c</fullName>
        <description>To display the total cost price of main vehicle and  additional vehicles for the opportunity</description>
        <formula>SO_Cost_Price__c + Total_Additional_Vehicle_Cost_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost Price (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <formula>SO_List_Price__c + Total_Additional_List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SO_Deposit_Amount__c</fullName>
        <formula>SO_Retail_Price__c  * SO_Deposit_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SO_Received_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Received Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Request_Detail__c</fullName>
        <label>Request Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Source_Enquiry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Enquiry</label>
        <referenceTo>SO_Enquiry__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>SO_Source_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_VAT_Qualifying__c</fullName>
        <label>VAT Qualifying</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proceed_with_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proceed with Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Quote.Opportunity.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Order_Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Production_Year__c</fullName>
        <label>Production Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_secondary_owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Use for Secondary Opportunities</description>
        <label>Secondary Owner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>SO Classic Admin</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>SO Classic Finance</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>SO Classic Sales</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>SO Classic Sales (Service)</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Contribution__c</fullName>
        <description>To display the total contribution of main vehicle and  additional vehicles for the opportunity</description>
        <formula>SO_Contribution__c + Total_Additional_Contribution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contribution (£)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Retail_Price__c</fullName>
        <description>To display the total retail price of main vehicle and  additional vehicles for the opportunity</description>
        <formula>SO_Retail_Price__c + Total_Additional_Retail_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Retail Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Customer_Contact__c</fullName>
        <description>Communications status with the customers</description>
        <label>Customer Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Responded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Is_Classic_Sales__c</fullName>
        <formula>RecordType.DeveloperName = &apos;SO_Reborn&apos; || 
RecordType.DeveloperName = &apos;SO_Works_Legends&apos; || RecordType.DeveloperName = &apos;SO_Continuation&apos; || 
RecordType.DeveloperName = &apos;SO_Limited_Edition&apos; || (RecordType.DeveloperName = &apos;SO_Classic_Bespoke&apos; &amp;&amp; ISPICKVAL(SO_Product_Offering__c,&apos;Bespoke&apos;))</formula>
        <label>Is Classic Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Product_Offering__c</fullName>
        <label>Product Offering</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>JLR_Product_Offering</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Reference_Number__c</fullName>
        <formula>SO_Reference_number_prefix__c   + SO_Reference_number_suffix__c</formula>
        <label>Reference Number</label>
        <type>Text</type>
    </fields>
</CustomObject>